<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView android:text="@string/empty" android:id="@+id/status"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="@string/empty" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/txtResultCategory"></TextView>
		<TextView android:text="@string/empty" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/txtResultAmount"></TextView>
		<TextView android:text="@string/empty" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/txtResultDirection"></TextView>
		<TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txtAboutNameLabel"></TextView>
		<CheckedTextView android:id="@+id/checkedTextView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txtAboutNameValue"></CheckedTextView>
		<TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txtAboutEmailLabel"></TextView>
		<CheckedTextView android:id="@+id/checkedTextView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txtAboutEmailValue"></CheckedTextView>
		<TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txtAboutWebLabel"></TextView>
		<CheckedTextView android:id="@+id/checkedTextView3" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/txtAboutWebValue"></CheckedTextView>
	</LinearLayout>
</ScrollView>