<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView android:text="@string/empty" android:id="@+id/status"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="TextView" android:id="@+id/textView1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<CheckedTextView android:text="@string/lblCategory"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/label_amount"></CheckedTextView>
		<TextView android:text="@string/empty" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/txtResultCategory"></TextView>
		<CheckedTextView android:text="@string/lblAmount"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/label_in_out"></CheckedTextView>
		<TextView android:text="@string/empty" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/txtResultAmount"></TextView>
		<CheckedTextView android:text="@string/lblInOut"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:id="@+id/label_categoy"></CheckedTextView>
		<TextView android:text="@string/empty" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/txtResultDirection"></TextView>
	</LinearLayout>
</ScrollView>